# dulnext

./: .cz.toml  .editorconfig  .env.example  .flake8  .gitignore  .isort.cfg  .pre-commit-config.yaml  .prettierrc  CHANGELOG.md  Dockerfile  ISSUE.md  LICENSE  README.md  TUTORIAL.md  common-site-config.default.json  docker-compose.yaml  package.json  pyproject.toml  site-config.example.json  site_config.default.json
.github/workflows/: main.yml
docs/: best-practices.md  installation.md  special-type.md
dudul_frappe_template/: hooks.py  modules.txt
dulnext/: constants.py  exceptions.py  hooks.py  modules.txt  settings.py
dulnext/controllers/: client_side_controller.py  post_controller.py  rest_controller.py  virtual_controller.py  virtual_document.py
dulnext/entities/: post.py
dulnext/mapper/: rest_mapper.py  rest_model_mapper.py  virtual_mapper.py
dulnext/mixins/: singleton.py
dulnext/models/: filterable.py  like.py  paginated.py  rest_context.py  virtual_context.py  virtual_dao.py
dulnext/setup/: install.py
dulnext/typings/: docfield.py
dulnext/utilities/: __init__.py  camel_to_snake.py  get_nested.py  logger.py  pagination_parser.py  parse_docfield.py
resources/: init-user-db.sh  nginx-entrypoint.sh
resources/db/: init-default-site-db.sh  init-user-db.sh
site-configurator/: create-multiple-site.yml  create-site-custom-app.yml  create-site-erpnext-app.yml  create-site-multiple-apps.yml
vrtnext/: constants.py  hooks.py  modules.txt  settings.py
vrtnext/abc/: virtual_context.py  virtual_controller.py  virtual_dao.py  virtual_document_metadata.py  (+5 more)
(+81 files in other folders)
