[project]
name = "dulnext"
authors = [
    { name = "abdmanharits@gmail.com", email = "abdmanharits@gmail.com" },
]
description = "Frappe Template Created By Myself"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "$version"
version_scheme = "pep440"
version = "0.1.0"
update_changelog_on_bump = true
major_version_zero = true
