[project]
name = "vrtnext"
authors = [
    { name = "Abdurrahman Harits Ghiffary", email = "abdmanharits@gmail.com" },
]
description = "Frappe Template Created By Myself"
requires-python = ">=3.10"
readme = "README.md"
dynamic = ["version"]
dependencies = [
    # "frappe~=15.0.0" # Installed and managed by bench.
    "requests",
    "pytest",
    "inflection",
    "Deprecated",
]

[build-system]
requires = ["flit_core >=3.4,<4"]
build-backend = "flit_core.buildapi"

# These dependencies are only installed when developer mode is enabled
[tool.bench.dev-dependencies]
# package_name = "~=1.1.0"

[tool.black]
line-length = 80

[tool.isort]
profile = "black"
line_length = 80

[tool.mypy]
ignore_missing_imports = true
disable_error_code = "import-untyped"
